--- a/src/app/profesor/profesor-home/profesor-home.component.html
+++ b/src/app/profesor/profesor-home/profesor-home.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container col-sm-10">
     <h1>Listado de Profesores</h1>
-    <table datatable class="row-border hover">
+    <table id="tabla_profesor" class="row-border hover">
     <thead>
       <tr>
         <th>ID</th>
@@ -14,8 +14,98 @@
         <th scope="row">{{profesor.id}}</th>
         <td>{{profesor.nombre}}</td>
         <td>{{profesor.correo}}</td>
-        <td>Borrar</td>
+        <td> 
+          <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-group mr-2" role="group" aria-label="First group">
+              <button type="button" class="btn btn-secondary" (click)="open(editar,profesor.id)">
+                <fa-icon [icon]="faEdit"></fa-icon>
+                 Editar
+              </button>
+            </div>
+            <div class="btn-group mr-2" role="group" aria-label="Second group">
+              <button type="button" class="btn btn-secondary" (click)="open(borrar,profesor.id)">
+                <fa-icon [icon]="faTimes"></fa-icon>
+                Borrar
+              </button>
+            </div>
+          </div>
+        </td>
       </tr>
     </tbody>
   </table>
 </div>
+
+<ng-template #editar let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">EDITAR PROFESOR</h4>
+    <button type="button" class="close" aria-label="Close" (click)="close()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+
+    <p>
+      <ngb-alert type="danger" *ngIf="correoError" (close)="correoError = false">
+        <strong>Error!</strong> Correo ingresado existe y/o tiene un formato invalido, favor revisar.
+      </ngb-alert>
+    </p>
+
+    <p>
+      <ngb-alert type="danger" *ngIf="serverError" (close)="serverError = false">
+        <strong>Error!</strong> Hubo un problema, favor intentar mas tarde.
+      </ngb-alert>
+    </p>
+
+    <form [formGroup]="profesorForm" (ngSubmit)="update(profesorForm.value,profesor.id)">
+      <div class="form-row">
+        <div class="form-group col-md-12">
+          <label for="nombre">Nombre:</label>
+          <input [class.is-invalid] = "getNombre.invalid && getNombre.touched"
+            class="form-control" formControlName="nombre" [ngModel]="profesor.nombre"/>
+            
+          <div *ngIf="(getNombre.invalid && getNombre.touched) || getNombre.dirty">
+            <small *ngIf="getNombre.errors?.required" class="text-danger">Nombre es requerido</small>
+          </div>
+        </div>
+        <div class="form-group col-md-12">
+          <label for="correo">Correo:</label>
+          <input [class.is-invalid] = "getCorreo.invalid && getCorreo.touched"
+            class="form-control" formControlName="correo" [ngModel]="profesor.correo"/>
+          <small>(Ejemplo: usuario@correo.com)</small>
+
+          <div *ngIf="(getCorreo.invalid && getCorreo.touched) || getCorreo.dirty">
+            <small *ngIf="getCorreo.errors?.required" class="text-danger">Nombre es requerido</small>
+            <small *ngIf="getCorreo.errors?.pattern" class="text-danger">Favor ingrese un correo valido</small>
+          </div>
+        </div>
+      </div>
+      
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-outline-primary"  [disabled]="(profesorForm.invalid)">Guardar</button>
+      </div>
+    </form>
+  </div>
+</ng-template>
+
+<ng-template #borrar let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">ESTAS SEGURO?</h4>
+    <button type="button" class="close" aria-label="Close" (click)="close()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+
+    <p>
+      <ngb-alert type="danger" *ngIf="serverError" (close)="serverError = false">
+        <strong>Error!</strong> Hubo un problema, favor intentar mas tarde.
+      </ngb-alert>
+    </p>
+
+    <p>Esta acción no podra deshacerse.</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-primary" (click)="deleteProf(profesor.id)">Aceptar</button>
+  </div>
+</ng-template>
+  
