--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,27 +10,27 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-          Home
+          <h2>Home</h2> 
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/profesores" routerLinkActive="active">
-          Profesores
+          <h2>Profesores</h2>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/cursos" routerLinkActive="active">
-          Cursos
+          <h2>Cursos</h2>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/alumnos" routerLinkActive="active">
-            Alumnos
+          <h2> Alumnos</h2>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/pruebas" routerLinkActive="active">
-            Pruebas
+          <h2>Pruebas</h2>
         </a>
       </li>
       
